# chuk-grid

./: README.md  chuk_grid.ipynb  environment.yml  requirements.txt  setup.cfg
scripts/: sync.sh
src/: create_prototype_grid.py  example_metadata.py  latlon_to_eastingnorthing.py
src/chuk_grid/: create_chuk_grid.py  create_chuk_subgrid.py  example_metadata.py  latlon_to_eastingnorthing.py  make_latlon_2d.py
