[metadata]
name = chuk-grid
version = 0.0.1
author = Niall McCarroll
author_email = n.f.mccarroll@reading.ac.uk
description = Create the EOCIS-CHUK grid
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eocis-chuk/chuk-grid
project_urls =
    Bug Tracker =  https://github.com/eocis-chuk/chuk-grid/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    create_chuk_grid = chuk_grid.create_chuk_grid:main

[options.packages.find]
where = src

